--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -155,7 +155,7 @@ We note that while forming the union of all altered, newly added service and new
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{align}
-  &\mathbb{O} \equiv \tuple{\isa{\mathbf{o}}{\Y \cup \mathbb{J}}, \isa{l}{\H}, \isa{k}{\H}, \isa{\mathbf{a}}{\Y}}
+  &\mathbb{O} \equiv \tuple{\isa{\mathbf{o}}{\Y \cup \mathbb{J}}, \isa{a}{\H}, \isa{e}{\H}, \isa{l}{\H}, \isa{k}{\H}, \isa{\mathbf{a}}{\Y}}
 \end{align}
 \begin{align}
     &\Delta_1 \colon \left\{\;\begin{aligned}
@@ -168,9 +168,15 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\text{where:} \\
     &\ \begin{aligned}
       g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}\!\!\!\!(\mathbf{r}_g) \\
-      \mathbf{p} &= \left[ \tup{\begin{alignedat}{3}
-        \is{\mathbf{o}&}{\mathbf{r}_\mathbf{o}}\ts\is{&l&}{\mathbf{r}_l}\ts\\
-        \is{\mathbf{a}&}{w_\mathbf{o}}\ts\is{&k&}{(w_s)_h}
+      \mathbf{p} &= \left[ \tup{\begin{alignedat}{5}
+        % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become \mathbf{o}.
+        % TODO: Rename k to h. Then 5 of the 6 fields keep their names.
+        \is{\mathbf{d}&}{\mathbf{r}_\wl¬data},
+        \is{&e&}{(w_s)_e},
+        \is{&\mathbf{o}&}{w_\wr¬authoutput},\\
+        \is{y&}{\mathbf{r}_\wl¬payloadhash},
+        \is{&h&}{(w_s)_h},
+        \is{&a&}{w_a}
       \end{alignedat}}
       \,\middle\vert\ 
       w \orderedin \mathbf{w}, \mathbf{r} \orderedin w_\mathbf{r}, \mathbf{r}_s = s
