Fix for a previous PR

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -155,7 +155,14 @@ We note that while forming the union of all altered, newly added service and new
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{align}
-  &\mathbb{O} \equiv \tuple{\isa{\mathbf{o}}{\Y \cup \mathbb{J}}, \isa{a}{\H}, \isa{e}{\H}, \isa{l}{\H}, \isa{k}{\H}, \isa{\mathbf{a}}{\Y}}
+  &\mathbb{O} \equiv \tuple{
+    \isa{h}{\H},
+    \isa{e}{\H},
+    \isa{a}{\H},
+    \isa{\mathbf{o}}{\Y},
+    \isa{y}{\H},
+    \isa{\mathbf{d}}{\Y \cup \mathbb{J}}
+  }
 \end{align}
 \begin{align}
     &\Delta_1 \colon \left\{\;\begin{aligned}
