--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -232,10 +232,10 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \end{description}
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
-    \item[$\chi_m$] The index of the blessed service.
-    \item[$\chi_v$] The index of the designate service.
-    \item[$\chi_a$] The index of the assign service.
-    \item[$\chi_\mathbf{g}$] The always-accumulate service indices and their basic gas allowance.
+    \item[$\manager$] The index of the blessed service.
+    \item[$\delegater$] The index of the designate service.
+    \item[$\assigners$] The indices of the services able to assign each core's authorizer queue.
+    \item[$\alwaysaccers$] The always-accumulate service indices and their basic gas allowance.
   \end{description}
   \item[$\pi$] The activity statistics for the validators. % π
   \item[$\vartheta$] The accumulation queue. % ϑ
@@ -270,7 +270,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{G}_A = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
   \item[$\mathsf{G}_I = 50,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
   \item[$\mathsf{G}_R = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
-  \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\mathsf{C} + \sum_{g \in \mathcal{V}(\chi_\mathbf{g})}(g)$.
+  \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\mathsf{C} + \sum_{g \in \mathcal{V}(\alwaysaccers)}(g)$.
   \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
   \item[$\mathsf{I} = 16$] The maximum amount of work items in a package.
   \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
