--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -95,7 +95,7 @@ The other two components of statistics are the core and service activity statist
 The core statistics are updated using several intermediate values from across the overall state-transition function; $\mathbf{w}$, the incoming work-reports, as defined in \ref{eq:incomingworkreports} and $\mathbf{W}$, the newly available work-reports, as defined in \ref{eq:availableworkreports}. We define the statistics as follows:
 
 \begin{align}
-  \forall c \in \N_C : \pi'_C[c] &\equiv \tup{
+  \forall c \in \N_\mathsf{C} : \pi'_C[c] &\equiv \tup{
     \begin{alignedat}{5}
       \is{i&}{R(c)_i}\,,\;
       \is{&x&}{R(c)_x}\,,\;
@@ -107,9 +107,9 @@ The core statistics are updated using several intermediate values from across th
       \is{&p&}{\span\span \textstyle \sum_{a \in \mathbf{E}_A} a_f[c]\qquad}
     \end{alignedat}
   }\!\!\!\!\\
-  \where R(c \in \N_C) &\equiv \!\!\!\!\!\!\!\!\!\!\!\sum_{r \in w_\mathbf{r}, w \in \mathbf{w}, w_c = c}
+  \where R(c \in \N_\mathsf{C}) &\equiv \!\!\!\!\!\!\!\!\!\!\!\sum_{r \in w_\mathbf{r}, w \in \mathbf{w}, w_c = c}
   \!\!\!\!\!\!\!\!\!\!\!(r_i, r_x, r_z, r_e, r_u, \is{b}{(w_s)_l})\\
-  \also D(c \in \N_C) &\equiv \!\!\!\!\!\!\sum_{w \in \mathbf{W}, w_c = c}
+  \also D(c \in \N_\mathsf{C}) &\equiv \!\!\!\!\!\!\sum_{w \in \mathbf{W}, w_c = c}
   \!\!\!\!\!\!(w_s)_l + \mathsf{W}_G\ceil{(w_s)_n\nicefrac{65}{64}}
 \end{align}
 
