fix: digest code hash notation

--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -331,7 +331,7 @@ We require that any segment roots mentioned in the segment-root lookup be verifi
 
 Finally, we require that all work-digests within the extrinsic predicted the correct code hash for their corresponding service:
 \begin{align}\label{eq:reportcodesarecorrect}
-  \forall w \in \mathbf{w}, \forall r \in w_r : r_c = \delta[r_s]_c
+  \forall w \in \mathbf{w}, \forall r \in w_r : {r_\wl¬codehash} = \delta[r_s]_c
 \end{align}
 
 
