Fix out-of-place brackets

--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -47,9 +47,8 @@ The original data may be reconstructed with any 342 of the 1,023 resultant items
       \se(\sq{\mathbf{x} \mid \tup{\mathbf{x}, i} \orderedin \mathbf{c}}) &\when [i \mid (\mathbf{x}, i) \orderedin \mathbf{c}] = [0, 1, \dots 341]\\
       \lace_k([
         \ecrecover([(\spl_2(\mathbf{x})_p, i) \mid (\mathbf{x}, i) \orderedin \mathbf{c}])
-      \mid p \in \N_k &\text{always}\\
+      \mid p \in \N_k]) &\text{always}\\
     \end{cases}
-    ])
 %      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose[ \spl_2(\mathbf{x}) \mid (\mathbf{x}, i) \orderedin \mathbf{c}] ]
   }
 \end{equation}
