--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -44,9 +44,9 @@ The original data may be reconstructed with any 342 of the 1,023 resultant items
   \ecrecover_{k \in \N}\colon\abracegroup{
     \protoset{\tuple{\blob_{2k}, \N_{1023}}}_{342} &\to \blob_{684k} \\
     \mathbf{c} &\mapsto \begin{cases}
-      \se(\sq{\mathbf{x} \mid \tup{\mathbf{x}, i} \orderedin \mathbf{c}}) &\when [i \mid (\mathbf{x}, i) \orderedin \mathbf{c}] = [0, 1, \dots 341]\\
+      \se(\sq{\mathbf{x} \mid \tup{\mathbf{x}, i} \orderedin \orderby{i}{(\mathbf{x}, i) \in \mathbf{c}}}) &\when \set{i \mid (\mathbf{x}, i) \in \mathbf{c}} = \N_{342}\\
       \lace_k([
-        \ecrecover([(\spl_2(\mathbf{x})_p, i) \mid (\mathbf{x}, i) \orderedin \mathbf{c}])
+        \ecrecover(\set{(\spl_2(\mathbf{x})_p, i) \mid (\mathbf{x}, i) \in \mathbf{c}})
       \mid p \in \N_k]) &\text{always}\\
     \end{cases}
 %      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose[ \spl_2(\mathbf{x}) \mid (\mathbf{x}, i) \orderedin \mathbf{c}] ]
