--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -208,7 +208,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
       \forall c \in \coreindex :
         \local¬authqueue'\sub{c} &= (
           \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬assigners\sub{c})_\ao¬poststate
-        )_\ps¬authqueue \\
+        )_\ps¬authqueue\sub{c} \\
       \mathbf{n} &= \bigcup_{s \in \mathbf{s}}( \set{
           (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬poststate)_\ps¬accounts
             \setminus
